<resources>
    <string name="app_name">Eventology</string>
    <string name="login_text">Log In</string>
    <string name="password">Password</string>
    <string name="user">User</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="catalan">Catalan</string>
    <string name="spanish">Spanish</string>
    <string name="english">English</string>
    <string name="register">Sign Up</string>
    <string name="language_selector">Language Selector</string>
    <string name="error_invalid_credentials">The credentials you entered are incorrect. Please try again</string>
    <string name="error_invalid_email_format">Invalid email format</string>
    <string name="error_password_length">Password must be longer than 5 characters</string>
    <string name="error_network">Network Error</string>
    <string name="error_signup_failed">Sign up failed</string>
    <string name="events">Events</string>
    <string name="upcoming">Upcoming</string>
    <string name="finished">Finished</string>
    <string name="duration">Duration</string>
    <string name="buyTicket">Buy tickets</string>
    <string name="tickets">Tickets</string>
    <string name="updateEventImage" >Update event image</string>
    <string name="ticket_reserved">Ticket Reserved</string>
    <string name="select_seat">Select Seat</string>
    <string name="incidences">Incidences</string>
    <string name="add_incidence">Add</string>
    <string name="reason_empty">Reason cannot be empty</string>
    <string name="reason_too_long">Reason cannot exceed 500 characters</string>
    <string name="incidence_submitted">Incidence submitted</string>
    <string name="option_take_picture">Take Picture</string>
    <string name="option_upload_image">Upload Image</string>
    <string name="option_remove_image">Remove Image</string>
    <string name="status_open">Open</string>
    <string name="status_in_progress">In Progress</string>
    <string name="status_closed">Closed</string>
    <string name="incidence_resolution_message">You will receive a message once the incidence is resolved.</string>
    <string name="add_incidence_inside">Add an Incidence</string>
    <string name="confirm_reserve">Confirm Reserve</string>
    <string name="seats_select">Select the Seats</string>
    <string name="no_tickets_available">All tickets sold</string>
    <string name="option_take_video">Take a Video</string>
    <string name="option_remove_video">Remove Video</string>
</resources>