<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:paddingHorizontal="@dimen/padding_horizontal_page"
    android:paddingVertical="@dimen/padding_vertical_page"
    android:layout_height="match_parent">

    <include
        layout="@layout/top_bar_go_previous_page"
        android:id="@+id/pageTopBar"
        />

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_incidence_inside"
        android:textSize="@dimen/text_size_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter text"
        android:inputType="text"
        android:maxLines="1"
        android:imeOptions="actionDone"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/addIncidenceButton"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="200dp"
        android:backgroundTint="@color/primary"
        android:text="@string/add_incidence"
        android:textSize="@dimen/text_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:text="@string/incidence_resolution_message"
        android:textSize="@dimen/text_size_md" />

</LinearLayout>
